--- a/main.html
+++ b/main.html
@@ -4,13 +4,39 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<style>
+    .container {
+        padding: 10px;
+        display: flex;
+        justify-content: center;
+    }
+    .red, .green, .yellow {
+        width: 50px;
+        height: 50px;
+        border-radius: 50%;
+        margin: 5px;
+    }
+    .red {
+        background-color: red;
+    }
+    .green {
+        background-color: green;
+    }
+    .yellow {
+        background-color: yellow;
+    }
+</style>
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+         <div class="container">
+        <div class="red"></div>
+        <div class="green"></div>
+        <div class="yellow"></div>
+    </div>
 </body>
 
 </html>
